feat: update API documentation to set default values for quantity and limit in response schemas

--- a/assets/documentation.yaml
+++ b/assets/documentation.yaml
@@ -1612,7 +1612,7 @@ components:
             type: object
             properties:
               id: { type: string, format: uuid }
-              quantity: { type: number }
+              quantity: { type: number, default: 1 }
               unit: { type: string }
 
     RecipeDetail:
@@ -1626,7 +1626,7 @@ components:
                 type: object
                 properties:
                   ingredient: { $ref: "#/components/schemas/Ingredient" }
-                  quantity: { type: number }
+                  quantity: { type: number, default: 1 }
                   unit: { type: string }
 
     RecipeResponse:
@@ -1699,9 +1699,9 @@ components:
             meta:
               type: object
               properties:
-                total: { type: integer }
+                total: { type: integer, default: 1 }
                 offset: { type: integer }
-                limit: { type: integer }
+                limit: { type: integer, default: 10 }
 
     SingleMealResponse:
       type: object
@@ -1719,7 +1719,7 @@ components:
               properties:
                 total: { type: integer, const: 1 }
                 offset: { type: integer, const: 0 }
-                limit: { type: integer, const: 1 }
+                limit: { type: integer, const: 10 }
 
     RecipeSummary:
       type: object
@@ -1743,7 +1743,7 @@ components:
             type: object
             properties:
               ingredientId: { type: string, format: uuid }
-              quantity: { type: number }
+              quantity: { type: number, default: 1 }
               unit: { type: string }
               notes: { type: string, nullable: true }
 
@@ -1761,9 +1761,9 @@ components:
             meta:
               type: object
               properties:
-                total: { type: integer }
+                total: { type: integer, default: 1 }
                 offset: { type: integer }
-                limit: { type: integer }
+                limit: { type: integer, default: 10 }
 
     SingleRecipeResponse:
       type: object
@@ -1781,7 +1781,7 @@ components:
               properties:
                 total: { type: integer, const: 1 }
                 offset: { type: integer, const: 0 }
-                limit: { type: integer, const: 1 }
+                limit: { type: integer, const: 10 }
 
     Menu:
       type: object
@@ -1863,9 +1863,9 @@ components:
             meta:
               type: object
               properties:
-                total: { type: integer }
+                total: { type: integer, default: 1 }
                 offset: { type: integer }
-                limit: { type: integer }
+                limit: { type: integer, default: 10 }
 
     SingleIngredientResponse:
       type: object
@@ -1883,7 +1883,7 @@ components:
               properties:
                 total: { type: integer, const: 1 }
                 offset: { type: integer, const: 0 }
-                limit: { type: integer, const: 1 }
+                limit: { type: integer, const: 10 }
 
     Ingredient:
       type: object
