fix: all recipe route

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   app:
-    image: meal-prep:latest
+    image: tonycava/meal-prep:latest
     container_name: meal-prep-app
     build:
       context: .
