--- a/assets/documentation.yaml
+++ b/assets/documentation.yaml
@@ -9,6 +9,8 @@ info:
 servers:
   - url: http://localhost:8090
     description: Development server
+  - url: https://meal-prep.tonycava.dev
+    description: Production server
 
 tags:
   - name: Menus
@@ -36,7 +38,7 @@ paths:
           application/json:
             schema:
               type: object
-              required: [name]
+              required: [ name ]
               properties:
                 name:
                   type: string
@@ -106,7 +108,7 @@ paths:
       summary: Récupérer les menus
       operationId: listMenus
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: limit
           in: query
@@ -176,14 +178,14 @@ paths:
       summary: Sauvegarder/Créer un menu
       operationId: createMenu
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       requestBody:
         required: true
         content:
           application/json:
             schema:
               type: object
-              required: [name, mealIds]
+              required: [ name, mealIds ]
               properties:
                 name: { type: string, example: "Menu de la semaine" }
                 description:
@@ -199,7 +201,7 @@ paths:
                   description: Liste des IDs de repas à inclure dans le menu
                   items:
                     type: object
-                    required: [mealId, dayNumber]
+                    required: [ mealId, dayNumber ]
                     properties:
                       mealId:
                         {
@@ -266,7 +268,7 @@ paths:
       description: Génère un menu (plusieurs repas sur plusieurs jours) avec critères nutritionnels Min/Max
       operationId: generateMenu
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: duration
           description: Nombre de jours sur lesquels s'étale le menu
@@ -276,7 +278,7 @@ paths:
           in: query
           schema:
             type: string
-            enum: [vegetarian, vegan, keto, paleo, other]
+            enum: [ vegetarian, vegan, keto, paleo, other ]
         - name: caloriesMin
           in: query
           schema: { type: integer }
@@ -425,7 +427,7 @@ paths:
       summary: Détails d'un menu
       operationId: getMenu
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -499,7 +501,7 @@ paths:
       summary: Modifier un menu
       operationId: updateMenu
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -612,7 +614,7 @@ paths:
       summary: Supprimer un menu
       operationId: deleteMenu
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -700,7 +702,7 @@ paths:
           in: query
           schema:
             type: string
-            enum: [appetizer, side_dish, dessert, snack, beverage, other]
+            enum: [ appetizer, side_dish, dessert, snack, beverage, other ]
         - name: diet
           in: query
           schema:
@@ -767,7 +769,7 @@ paths:
       description: Créer une nouvelle recette
       operationId: createRecipe
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       requestBody:
         required: true
         content:
@@ -795,7 +797,7 @@ paths:
                       properties:
                         {
                           message:
-                            { type: string, example: "Title is required" },
+                            { type: string, example: "Un titre est requis." },
                         },
                     }
         "401":
@@ -884,7 +886,7 @@ paths:
       description: Modifie une recette via son identifiant
       operationId: updateRecipe
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -983,7 +985,7 @@ paths:
       description: Supprimer une recette via son identifiant
       operationId: deleteRecipe
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -1060,6 +1062,49 @@ paths:
         "500":
           $ref: "#/components/responses/InternalError"
 
+  /v1/recipes/{id}/nutrition:
+    get:
+      tags:
+        - Recettes
+      summary: Détails nutritionel d'une recette
+      description: Récupère une recette donnée via son identifiant
+      operationId: getRecipeNutrition
+      parameters:
+        - name: id
+          in: path
+          required: true
+          schema: { type: string, format: uuid }
+      responses:
+        "200":
+          description: Détails de la recette récupérés avec succès
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: { type: number, const: 200 }
+                  data:
+                    $ref: "#/components/schemas/NutritionInfo"
+        "404":
+          description: Recette non trouvée
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: { type: string, const: error }
+                  error:
+                    {
+                      type: object,
+                      properties:
+                        {
+                          message:
+                            { type: string, example: "Recipe not found" },
+                        },
+                    }
+        "500":
+          $ref: "#/components/responses/InternalError"
+
   /v1/meals:
     get:
       tags:
@@ -1068,13 +1113,13 @@ paths:
       description: Récupère la liste des repas générés
       operationId: listMeals
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: mealType
           in: query
           schema:
             type: string
-            enum: [breakfast, lunch, dinner, snack]
+            enum: [ breakfast, lunch, dinner, snack ]
         - name: limit
           in: query
           schema: { type: integer, default: 10 }
@@ -1155,18 +1200,18 @@ paths:
       description: Crée un nouveau repas composé de plusieurs recettes
       operationId: createMeal
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       requestBody:
         required: true
         content:
           application/json:
             schema:
               type: object
-              required: [mealType, recipeIds]
+              required: [ mealType, recipeIds ]
               properties:
                 mealType:
                   type: string
-                  enum: [breakfast, lunch, dinner, snack]
+                  enum: [ breakfast, lunch, dinner, snack ]
                 recipeIds:
                   type: array
                   items:
@@ -1264,7 +1309,7 @@ paths:
       description: Génère un repas composé selon des critères nutritionnels précis
       operationId: generateMeal
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: diet
           in: query
@@ -1424,7 +1469,7 @@ paths:
       description: Récupère un repas donné via son identifiant
       operationId: getMeal
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -1499,7 +1544,7 @@ paths:
       description: Modifie un repas via son identifiant
       operationId: updateMeal
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -1513,7 +1558,7 @@ paths:
               properties:
                 mealType:
                   type: string
-                  enum: [breakfast, lunch, dinner, snack]
+                  enum: [ breakfast, lunch, dinner, snack ]
                 recipeIds:
                   type: array
                   items: { type: string, format: uuid }
@@ -1603,7 +1648,7 @@ paths:
       description: Supprimer un repas via son identifiant
       operationId: deleteMeal
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -1767,7 +1812,7 @@ paths:
       description: Ajoute un nouvel ingrédient à la base de données
       operationId: createIngredient
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       requestBody:
         required: true
         content:
@@ -1961,7 +2006,7 @@ paths:
       description: Modifie un ingrédient existant
       operationId: updateIngredient
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -2034,7 +2079,7 @@ paths:
       description: Supprime un ingrédient existant
       operationId: deleteIngredient
       security:
-        - ApiKeyAuth: []
+        - ApiKeyAuth: [ ]
       parameters:
         - name: id
           in: path
@@ -2093,26 +2138,26 @@ components:
 
     RecipeInput:
       type: object
-      required: [title, category]
+      required: [ title, instructions, ingredients ]
       properties:
-        title: { type: string }
-        description: { type: string }
-        instructions: { type: string }
-        imageUrl: { type: string }
-        prepTimeMin: { type: integer }
-        cookTimeMin: { type: integer }
-        servings: { type: integer }
-        category: { type: string }
-        diet: { type: string }
+        title: { type: string, const: "Ma recette" }
+        description: { type: string, const: "Ma description" }
+        instructions: { type: string, const: "Mes instructions" }
+        imageUrl: { type: string, const: "http://example.com/image.jpg" }
+        prepTimeMin: { type: integer, const: 30 }
+        cookTimeMin: { type: integer, const: 3 }
+        servings: { type: integer, const: 1 }
+        category: { type: string, const: "MAIN_COURSE" }
+        diet: { type: string, const: "VEGETARIAN" }
         isPublic: { type: boolean }
         ingredients:
           type: array
           items:
             type: object
             properties:
-              id: { type: string, format: uuid }
-              quantity: { type: number }
-              unit: { type: string }
+              id: { type: string, format: uuid, const: "063de2b5-799c-4599-9e77-ce3e05dfe553" }
+              quantity: { type: number, const: 1 }
+              unit: { type: string, const: "GRAM" }
 
     RecipeDetail:
       allOf:
@@ -2147,7 +2192,7 @@ components:
         id: { type: string, format: uuid }
         mealType:
           type: string
-          enum: [breakfast, lunch, dinner, snack]
+          enum: [ breakfast, lunch, dinner, snack ]
           default: lunch
           description: Le type de repas (issu de la DB Meal.mealType)
         recipes:
@@ -2158,7 +2203,7 @@ components:
             properties:
               type:
                 type: string
-                enum: ["starter", "main_course", "dessert"]
+                enum: [ "starter", "main_course", "dessert" ]
                 description: Type de la recette (entrée, plat ou dessert)
               recipe:
                 $ref: "#/components/schemas/Recipe"
@@ -2236,15 +2281,14 @@ components:
         isPublic: { type: boolean }
         createdAt: { type: string, format: date-time }
         updatedAt: { type: string, format: date-time }
-        recipeIngredient:
+        recipeIngredients:
           type: array
           items:
             type: object
             properties:
-              ingredientId: { type: string, format: uuid }
+              id: { type: string, format: uuid }
               quantity: { type: number }
               unit: { type: string }
-              notes: { type: string, nullable: true }
 
     RecipeListResponse:
       type: object
@@ -2271,16 +2315,8 @@ components:
         data:
           type: object
           properties:
-            recipes:
-              type: array
-              items:
-                $ref: "#/components/schemas/RecipeSummary"
-            meta:
-              type: object
-              properties:
-                total: { type: integer, const: 1 }
-                offset: { type: integer, const: 0 }
-                limit: { type: integer, const: 1 }
+            recipe:
+              $ref: "#/components/schemas/RecipeSummary"
 
     Menu:
       type: object
@@ -2504,24 +2540,6 @@ components:
         calories:
           type: number
           description: Calories totales (kcal)
-        minerals:
-          type: array
-          items:
-            type: object
-            properties:
-              mineralType:
-                type: string
-              value:
-                type: number
-        vitamins:
-          type: array
-          items:
-            type: object
-            properties:
-              vitaminType:
-                type: string
-              value:
-                type: number
 
   responses:
     BadRequest:
