--- a/assets/documentation.yaml
+++ b/assets/documentation.yaml
@@ -1285,7 +1285,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  status: { type: string, const: error }
+                  status: { type: string, const: 400 }
                   error: { type: object, properties: { message: { type: string, example: "Invalid limit parameter" } } }
         "404":
           description: Ressource non trouvée
@@ -1294,7 +1294,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  status: { type: string, const: error }
+                  status: { type: string, const: 404 }
                   error: { type: object, properties: { message: { type: string, example: "Can not GET /v1/ingredients" } } }
         "500":
           $ref: "#/components/responses/InternalError"
@@ -1408,7 +1408,13 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/SingleIngredientResponse"
+                type: object
+                properties:
+                  status: { type: string, const: 201 }
+                  data:
+                    type: array
+                    items:
+                      $ref: "#/components/schemas/Ingredient"
         "400":
           description: Données invalides
           content:
@@ -1416,7 +1422,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  status: { type: string, const: error }
+                  status: { type: string, const: 400 }
                   error: { type: object, properties: { message: { type: string, example: "Name is required" } } }
         "401":
           description: API key manquante ou invalide
@@ -1425,7 +1431,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  status: { type: string, const: error }
+                  status: { type: string, const: 401 }
                   error: { type: object, properties: { message: { type: string, example: "API key is required in 'x-api-key' header" } } }
         "403":
           description: API key inactive
@@ -1434,7 +1440,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  status: { type: string, const: error }
+                  status: { type: string, const: 403 }
                   error: { type: object, properties: { message: { type: string, example: "API key is inactive" } } }
         "409":
           description: Ressource déjà existante
@@ -1443,7 +1449,7 @@ paths:
               schema:
                 type: object
                 properties:
-                  status: { type: string, const: error }
+                  status: { type: string, const: 409 }
                   error: { type: object, properties: { message: { type: string, example: "An ingredient with this name already exists" } } }
         "500":
           $ref: "#/components/responses/InternalError"
@@ -1470,8 +1476,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SingleIngredientResponse"
+        "400":
+          description: Requête invalide
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: { type: string, const: 400 }
+                  error: { type: object, properties: { message: { type: string, example: "Invalid UUID" } } }
         "404":
-          $ref: "#/components/responses/NotFound"
+          description: Ressource non trouvée
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: { type: string, const: 404 }
+                  error: { type: object, properties: { message: { type: string, example: "Ingredient not found" } } }
         "500":
           $ref: "#/components/responses/InternalError"
 
@@ -1872,7 +1894,7 @@ components:
     IngredientListResponse:
       type: object
       properties:
-        status: { type: string, const: success }
+        status: { type: string, const: 200 }
         data:
           type: object
           properties:
@@ -1880,30 +1902,21 @@ components:
               type: array
               items:
                 $ref: "#/components/schemas/Ingredient"
-            meta:
-              type: object
-              properties:
-                total: { type: integer, default: 1 }
-                offset: { type: integer }
-                limit: { type: integer, default: 10 }
+        meta:
+          type: object
+          properties:
+            total: { type: integer, default: 1 }
+            offset: { type: integer }
+            limit: { type: integer, default: 10 }
 
     SingleIngredientResponse:
       type: object
       properties:
-        status: { type: string, const: success }
+        status: { type: string, const: 200 }
         data:
-          type: object
-          properties:
-            ingredients:
-              type: array
-              items:
-                $ref: "#/components/schemas/Ingredient"
-            meta:
-              type: object
-              properties:
-                total: { type: integer, const: 1 }
-                offset: { type: integer, const: 0 }
-                limit: { type: integer, const: 10 }
+          type: array
+          items:
+            $ref: "#/components/schemas/Ingredient"
 
     Ingredient:
       type: object
