--- a/assets/documentation.yaml
+++ b/assets/documentation.yaml
@@ -690,6 +690,24 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/SingleRecipeResponse"
+        "400":
+          description: Requête invalide
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: { type: string, const: 400 }
+                  error: { type: object, properties: { message: { type: string, example: "An id is required" } } }
+        "401":
+          description: API key manquante ou invalide
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: { type: string, const: 401 }
+                  error: { type: object, properties: { message: { type: string, example: "API key is required in 'x-api-key' header" } } }
         "404":
           description: Recette non trouvée
           content:
@@ -735,7 +753,7 @@ paths:
                 type: object
                 properties:
                   status: { type: string, const: 400 }
-                  error: { type: object, properties: { message: { type: string, example: "Title is required" } } }
+                  error: { type: object, properties: { message: { type: string, example: "L'identifiant doit être un UUID valide." } } }
         "401":
           description: API key manquante ou invalide
           content:
@@ -792,6 +810,15 @@ paths:
                     type: object
                     properties:
                       message: { type: string, example: "Recipe deleted successfully" }
+        "400":
+          description: Requête invalide
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status: { type: string, const: 400 }
+                  error: { type: object, properties: { message: { type: string, example: "Id must be a valid UUID" } } }
         "401":
           description: API key manquante ou invalide
           content:
@@ -1439,9 +1466,7 @@ paths:
                 properties:
                   status: { type: string, const: 201 }
                   data:
-                    type: array
-                    items:
-                      $ref: "#/components/schemas/Ingredient"
+                    $ref: "#/components/schemas/Ingredient"
         "400":
           description: Requête invalide
           content:
@@ -1888,18 +1913,7 @@ components:
       properties:
         status: { type: string, const: success }
         data:
-          type: object
-          properties:
-            recipes:
-              type: array
-              items:
-                $ref: "#/components/schemas/RecipeSummary"
-            meta:
-              type: object
-              properties:
-                total: { type: integer, const: 1 }
-                offset: { type: integer, const: 0 }
-                limit: { type: integer, const: 10 }
+          $ref: "#/components/schemas/RecipeSummary"
 
     Menu:
       type: object
@@ -1999,9 +2013,7 @@ components:
       properties:
         status: { type: string, const: 200 }
         data:
-          type: array
-          items:
-            $ref: "#/components/schemas/IngredientDetail"
+          $ref: "#/components/schemas/IngredientDetail"
 
     Ingredient:
       type: object
